// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage renders error page with default message when error is undefined 1`] = `
<DocumentFragment>
  <div
    data-test="error-page"
  >
    <div
      data-test="error-message"
    >
      Sorry, an unexpected error has occurred.
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorPage renders error page with error message 1`] = `
<DocumentFragment>
  <div
    data-test="error-page"
    id="error-page"
  >
    <h1
      data-test="error-oops"
    >
      Oops!
    </h1>
    <p>
      Sorry, an unexpected error has occurred.
    </p>
    <p>
      <i
        data-test="error-message"
      >
        Not Found
      </i>
    </p>
  </div>
</DocumentFragment>
`;
